--- a/expense-tracker-angular/src/app/views/sign-up/sign-up.component.css
+++ b/expense-tracker-angular/src/app/views/sign-up/sign-up.component.css
@@ -1,8 +1,13 @@
 .signup-container {
     width: fit-content;
+    max-width: 80%;
     margin: 5% auto 5% auto;
 }
 
 .big-button {
     width: 40%;
+}
+
+mat-form-field {
+    margin-bottom: 5px;
 }
