After days of troubleshooting. We should never have put {mismatch: false} in the validator condition

--- a/expense-tracker-angular/src/app/views/sign-up/sign-up.component.css
+++ b/expense-tracker-angular/src/app/views/sign-up/sign-up.component.css
@@ -11,3 +11,11 @@
 mat-form-field {
     margin-bottom: 5px;
 }
+
+.name-container {
+    display: flex;
+}
+
+.spacer {
+    margin: 0% 2% 0% 2%;
+}
