--- a/expense-tracker-angular/src/app/views/dash/dash.component.html
+++ b/expense-tracker-angular/src/app/views/dash/dash.component.html
@@ -2,31 +2,30 @@
   <h1 class="mat-h1">Dashboard</h1>
   <mat-grid-list cols="{{ (cardLayout | async)?.columns }}" rowHeight="200px">
 
-    <!-- Mini card tiles -->
+    <!-- Mini card tile -->
     <mat-grid-tile *ngFor="let i of [1, 2, 3, 4]" [colspan]="( cardLayout | async )?.miniCard?.cols"
       [rowspan]="( cardLayout | async )?.miniCard?.rows">
       <app-dashboard-card></app-dashboard-card>
     </mat-grid-tile>
-    
+
     <!-- Normal card tiles -->
     <mat-grid-tile [colspan]="( cardLayout | async )?.chart?.cols" [rowspan]="( cardLayout | async )?.chart?.rows">
       <app-dashboard-card title="Expenses By Category">
         <app-expenses-by-category></app-expenses-by-category>
       </app-dashboard-card>
     </mat-grid-tile>
-    
+
     <mat-grid-tile [colspan]="( cardLayout | async )?.chart?.cols" [rowspan]="( cardLayout | async )?.chart?.rows">
       <app-dashboard-card title="Monthly Trend">
         <app-monthly-trend></app-monthly-trend>
       </app-dashboard-card>
     </mat-grid-tile>
 
-   <!--Table-->
-   <mat-grid-tile 
-      [colspan]="( cardLayout | async )?.table?.cols" 
-      [rowspan]="( cardLayout | async )?.table?.rows">
-     <app-dashboard-card title="Table of Expense"><div>Table Content Here</div></app-dashboard-card>
-   </mat-grid-tile>
-
+    <!--Table-->
+    <mat-grid-tile [colspan]="( cardLayout | async )?.table?.cols" [rowspan]="( cardLayout | async )?.table?.rows">
+      <app-dashboard-card title="Table of Expense">
+        <app-table></app-table>
+      </app-dashboard-card>
+    </mat-grid-tile>
   </mat-grid-list>
 </div>
