--- a/expense-tracker-angular/src/app/app.component.html
+++ b/expense-tracker-angular/src/app/app.component.html
@@ -1,3 +1,5 @@
 <div class="app-container">
-  <router-outlet></router-outlet>
+  <app-sidenav>
+    <router-outlet></router-outlet>
+  </app-sidenav>
 </div>
