--- a/expense-tracker-angular/src/app/components/dashboard-minicard/dashboard-minicard.component.css
+++ b/expense-tracker-angular/src/app/components/dashboard-minicard/dashboard-minicard.component.css
@@ -1,3 +1,56 @@
-.miniCard-container {
-    margin: auto;
+.miniCard-info {
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
+
+.miniCard-analysis {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.miniCard-info h1 {
+    margin: 0;
+}
+
+.miniCard-info {
+    margin: 20px;
+}
+
+.miniCard-info .spacer {
+    margin: 0 5px;
+}
+
+ .dashboard-card {
+    position: absolute;
+    top: 15px;
+    left: 15px;
+    right: 15px;
+    bottom: 15px;
+    margin: auto;
+ }
+ 
+ .dashboard-card-content {
+    text-align: center;
+    flex-grow: 1;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    max-height: 100%;
+    justify-content: center;
+    align-items: stretch;
+ }
+ 
+ mat-card {
+    display: flex;
+    flex-direction: column;
+ }
+
+ .miniCard-title {
+    text-align: center;
+ }
+
+ .miniCard-title p {
+    color: grey;
+ }
