--- a/expense-tracker-angular/src/app/components/sidenav/sidenav.component.html
+++ b/expense-tracker-angular/src/app/components/sidenav/sidenav.component.html
@@ -3,6 +3,7 @@
         <h1>Hello World!</h1>
     </mat-sidenav>
     <mat-sidenav-content>
+        <app-toolbar [sidenav]="sidenav"></app-toolbar>
         <ng-content></ng-content>
     </mat-sidenav-content>
 </mat-sidenav-container>
