--- a/expense-tracker-angular/src/app/components/add-expense/add-expense.component.html
+++ b/expense-tracker-angular/src/app/components/add-expense/add-expense.component.html
@@ -1,1 +1,32 @@
-<p>add-expense works!</p>
+<div mat-dialog-content class="add-expense-container">
+    <h2>Add Expenses here</h2>
+    <form [formGroup]="form">
+        <div formArrayName="rows" *ngFor="let row of rows.controls; let i = index">
+            <ng-container [formGroupName]="i">
+                <div class="row-group">
+                    <mat-form-field appearance="outline" class="input-field">
+                        <input matInput placeholder="Description" formControlName="description">
+                    </mat-form-field>
+
+                    <mat-form-field appearance="outline" class="value-field">
+                        <input matInput placeholder="Value" formControlName="value">
+                    </mat-form-field>
+
+                    <mat-form-field appearance="outline">
+                        <input matInput placeholder="Category" formControlName="category">
+                    </mat-form-field>
+                    <button mat-icon-button (click)="removeRow(i)" class="remove-button">
+                        <mat-icon>clear</mat-icon>
+                    </button>
+                </div>
+            </ng-container>
+        </div>
+    </form>
+    <div mat-dialog-actions class="add-button-wrapper">
+        <button mat-raised-button color="primary" (click)="submit()">Submit</button>
+        <div class="spacer"></div>
+        <button mat-raised-button color="accent" (click)="addRow()">Add Row</button>
+    </div>
+</div>
+
+<!-- Reference on how to use FormArrays: https://www.c-sharpcorner.com/article/how-to-create-formarray-in-angular/ -->
