--- a/expense-tracker-angular/src/app/components/sidenav/sidenav.component.html
+++ b/expense-tracker-angular/src/app/components/sidenav/sidenav.component.html
@@ -1,5 +1,5 @@
 <mat-sidenav-container>
-    <mat-sidenav #sidenav mode="side" opened>
+    <mat-sidenav #sidenav mode="side" [opened]="!!user">
         <mat-toolbar>
             <img src="assets/KK_logo_dark.png">
             <span class="spacer"></span>
