--- a/expense-tracker-angular/src/app/components/toolbar/toolbar.component.html
+++ b/expense-tracker-angular/src/app/components/toolbar/toolbar.component.html
@@ -1,5 +1,5 @@
 <mat-toolbar>
-    <button mat-icon-button (click)="toggleSideNav()">
+    <button mat-icon-button (click)="toggleSideNav()" *ngIf="user">
         <mat-icon>menu</mat-icon>
     </button>
     <span class="example-spacer"></span>
