--- a/expense-tracker-angular/src/app/components/add-expense/add-expense.component.css
+++ b/expense-tracker-angular/src/app/components/add-expense/add-expense.component.css
@@ -1,5 +1,12 @@
 .add-expense-container {
     padding: 2%;
+    min-width: 708px;
+    min-height: 223.31px;
+}
+
+.dialog-header {
+    display: flex;
+    align-items: center;
 }
 
 .row-group {
@@ -25,6 +32,7 @@
     align-items: center;
     justify-content: flex-end;
     margin-top: 16px;
+    padding: 0%;
 }
 
 .remove-button {
@@ -33,5 +41,22 @@
 }
 
 .spacer {
-    flex-grow: 1;
+    flex: 1 1 auto;
+}
+
+button {
+    width: 150px;
+    min-width: 100px;
+    white-space: nowrap;
+    min-width: auto;
+}
+
+.close-button {
+    position: relative;
+    top: -15px;
+    left: 14px;
+}
+
+h2 {
+    color: black;
 }
