--- a/expense-tracker-angular/src/app/views/sign-up/sign-up.component.html
+++ b/expense-tracker-angular/src/app/views/sign-up/sign-up.component.html
@@ -8,13 +8,8 @@
                 <form style="width: 80%;" [formGroup]="form" (ngSubmit)="signup()">
                     <div class="name-container">
                         <mat-form-field appearance="outline" style="width: 100%;">
-                            <mat-label>First Name</mat-label>
-                            <input matInput formControlName="firstName">
-                        </mat-form-field>
-                        <div class="spacer"></div>
-                        <mat-form-field appearance="outline" style="width: 100%;">
-                            <mat-label>Last Name</mat-label>
-                            <input matInput formControlName="lastName">
+                            <mat-label>Name</mat-label>
+                            <input matInput formControlName="name">
                         </mat-form-field>
                     </div>
 
