--- a/expense-tracker-angular/src/app/components/toolbar/toolbar.component.html
+++ b/expense-tracker-angular/src/app/components/toolbar/toolbar.component.html
@@ -10,13 +10,16 @@
         <mat-icon>notifications</mat-icon>
     </button>
     <button mat-icon-button class="avatar-button" [matMenuTriggerFor]="userMenu">
-        <ngx-avatar *ngIf="user?.photoURL" [src]="user?.photoURL" size="30"></ngx-avatar>
-        <ngx-avatar *ngIf="!user?.photoURL" [name]="user?.email" size="30"></ngx-avatar>
+        <app-avatar avatarSize="30"></app-avatar>
     </button>
     <mat-menu #userMenu="matMenu">
         <button mat-menu-item (click)="logout()">
             <mat-icon>logout</mat-icon>
             <span>Logout</span>
+        </button>
+        <button mat-menu-item routerLink="editprofile">
+            <mat-icon>edit</mat-icon>
+            <span>Edit Profile</span>
         </button>
     </mat-menu>
 </mat-toolbar>
